# Virtual-Audio-Mixer

./: .gitignore  .prettierrc  eslint.config.js  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.renderer.config.mts
AudioMixerEngine/: .clang-format  CMakeLists.txt  CMakeUserPresets.json  package-lock.json  package.json  vcpkg-configuration.json
AudioMixerEngine/src/: audioMixer.cpp  audioMixer.h  deviceManager.cpp  deviceManager.h  main.cpp  main.h  miniaudio_incl.cpp  serialManager.cpp  serialManager.h  worker.cpp  worker.h
electron/: package-lock.json  package.json  vite.config.ts
electron/dist-electron/: main.js
electron/electron/: main.ts
electron/src/: audioMixer.ts
src/: app.tsx  audioMixer.ts  global.css  global.d.ts  home.tsx  layout.tsx  main.ts  preload.ts
src/components/: channel.tsx  deviceDropdown.tsx  newChannel.tsx  sidebar.tsx
src/components/ui/: button.tsx
src/pages/: device.tsx  mixer.tsx
